# indiekey_juce

./: .gitignore  CMakeLists.dist.txt  CMakeLists.txt  README.md  bitbucket-pipelines.yml  build.py  indiekey_juce.cpp  indiekey_juce.h  vcpkg.json
include/indiekey/: Activation.h  ActivationClient.h  ActivationsDatabase.h  Crypto.h  Encoding.h  Endpoints.h  License.h  ProductData.h  RestClient.h
include/indiekey/messages/: ActivationRequest.h  OfflineRequest.h  TrialRequest.h
include/indiekey/util/: ScopedFunction.h
scripts/: dist.py
src/: Activation.cpp  ActivationClient.cpp  ActivationsDatabase.cpp  Crypto.cpp  RestClient.cpp
test/: Activation.test.cpp
